fixed css for mobile responsive display on small devices

--- a/wp-content/themes/my-portfolio/style.css
+++ b/wp-content/themes/my-portfolio/style.css
@@ -92,7 +92,6 @@ h2 {
  .featured-album {
      position: absolute;
      top: 60%;
-     margin: 0 26%;
      width: 50%;
      color: #fff;
      text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.8);
